Bug 345342 - workspace 5.2 fails to be build with kjobwidgets git master (2015-03-19)
Summary: workspace 5.2 fails to be build with kjobwidgets git master (2015-03-19)
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR grave
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-19 16:55 UTC by Harald Sitter
Modified: 2015-03-22 20:06 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2015-03-19 16:55:13 UTC
jobviewadaptor.cpp: In member function 'void JobViewV2Adaptor::setError(uint)':
jobviewadaptor.cpp:57:15: error: 'class JobView' has no member named 'setError'
     parent()->setError(errorCode);
               ^

problem: kjobwidgets master has a new function in the XML setError(uint), the plasma-workspace build creates an adaptor for it using the JobView class from kuiserver. The JobView class however has no setError(uint) in workspace < 5.3 and thus fails to build.


Reproducible: Always
Comment 1 David Rosca 2015-03-19 16:59:17 UTC
This will be fixed once https://git.reviewboard.kde.org/r/122970/ is submitted.
Comment 2 David Edmundson 2015-03-22 17:12:42 UTC
So this is fixed then?
Comment 3 David Rosca 2015-03-22 20:06:18 UTC
Git commit abafc8a6e72e4bb8d84cac2863d8513ed50aff00 by David Rosca.
Committed on 22/03/2015 at 20:03.
Pushed by drosca into branch 'master'.

Move added setError method to org.kde.JobView.xml

Reuse org.kde.JobView.xml file that is no longer used anywhere.
It now contains the current org.kde.JobViewV2 interface spec.

org.kde.JobViewV2.xml is still available, but only for backwards
compatibility.

This fixes source compatibility break from
812d0b440e7f08e3acdd1c9bb95779bd871b75b3
REVIEW: 122970

M  +0    -1    src/CMakeLists.txt
M  +0    -1    src/kuiserverjobtracker.cpp
M  +0    -1    src/kuiserverjobtracker_p.h
M  +9    -2    src/org.kde.JobView.xml
M  +0    -4    src/org.kde.JobViewV2.xml

http://commits.kde.org/kjobwidgets/abafc8a6e72e4bb8d84cac2863d8513ed50aff00