Move added setError method to org.kde.JobView.xml

Reuse org.kde.JobView.xml file that is no longer used anywhere.
It now contains the current org.kde.JobViewV2 interface spec.

org.kde.JobViewV2.xml is still available, but only for backwards
compatibility.

This fixes source compatibility break from
812d0b440e7f08e3acdd1c9bb95779bd871b75b3

BUG: 345342
REVIEW: 122970