src/kuiserverjobtracker_p.h
@@ -27,7 +27,6 @@
 #include <QtCore/QMap>
 
 #include "jobviewserverinterface.h"
-#include "jobviewiface.h"
 
 class KSharedUiServerProxy : public QObject
 {
